welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while( fini=false) {if (estSurMessage())
           ^BDRBuggle:5: error: not found: value litmessage
	else if (litmessage()=="L") {gauche() ; avance();}
                 ^BDRBuggle:6: error: not found: value litmessage
	else if (litmessage()=="I") { gauche() ; gauche() ; avance();}
                 ^BDRBuggle:7: error: not found: value litmessage
	else if (litmessage()=="A") { avance();}
                 ^BDRBuggle:8: error: not found: value litmessage
	else if (litmessage()=="B") {avance() ; avance();}
                 ^BDRBuggle:9: error: not found: value litmessage
	else if (litmessage()=="C") {avance() ; avance() ; avance();}
                 ^BDRBuggle:10: error: not found: value litmessage
	else if (litmessage()=="Z") {recule();}
                 ^BDRBuggle:11: error: not found: value litmessage
	else if (litmessage()=="Y") {recule() ; recule();}
                 ^BDRBuggle:12: error: not found: value litmessage
	else if (litmessage()=="X") {recule() ; recule() ; recule();}
                 ^BDRBuggle:13: error: not found: value litmessage
	else if (litmessage()=="") {fini=true;} } 
                 ^